<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#410FA3"
        android:paddingStart="24dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#410FA3"
                android:src="@drawable/baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/fredoka_medium"
                android:gravity="center"
                android:paddingEnd="24dp"
                android:paddingRight="64dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/create_an_account"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/fredoka_regular"

            android:text="@string/first_name"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/firstname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#080E1E0D"

            android:fontFamily="@font/fredoka_regular"
            android:hint="@string/your_first_name"
            android:padding="12dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_regular"

            android:text="@string/last_name"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/lastname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#080E1E0D"

            android:fontFamily="@font/fredoka_regular"
            android:hint="@string/your_last_name"
            android:padding="12dp"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_regular"

            android:text="@string/email_address"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#080E1E0D"
            android:fontFamily="@font/fredoka_regular"
            android:hint="@string/email"

            android:padding="12dp"
            android:textSize="16sp" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#5C6BC0"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/continue_"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_regular"
                android:text="@string/already_you_member"
                android:textColor="@color/text_color"

                android:textSize="17sp" />

            <TextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/fredoka_regular"

                android:text="@string/login"
                android:textColor="#5C6BC0"
                android:textSize="17sp" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>