<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#410FA3"
        android:paddingStart="24dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#410FA3"
                android:src="@drawable/baseline_arrow_back_ios_24" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/fredoka_medium"
                android:gravity="center"
                android:paddingRight="64dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/login" />

        <TextView
            android:id="@+id/for_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_medium"

            android:gravity="center"
            android:text="@string/for_free_join_now_and_n_start_learning"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/email_address"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#080E1E0D"
            android:fontFamily="@font/fredoka_regular"
            android:hint="@string/email"
            android:padding="12dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#080E1E0D"
                android:fontFamily="@font/fredoka_regular"

                android:hint="******"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/seepass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:paddingEnd="20dp"
                android:src="@drawable/baseline_remove_red_eye_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_input"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/forgot_password"

            android:textColor="#F44336"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#5C6BC0"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/login"

            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/not_your_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_regular"
                android:text="@string/not_you_member"

                android:textColor="@color/text_color"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/fredoka_regular"
                android:paddingHorizontal="2dp"

                android:text="@string/signup_small"
                android:textColor="#5C6BC0"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/use_can_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_can_use"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/google_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/fredoka_regular"
                android:paddingHorizontal="2dp"

                android:text="@string/google_for"
                android:textColor="#5C6BC0"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/sign_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_regular"
                android:text="@string/sign_in_small"
                android:textColor="@color/text_color"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>